@startuml

title __JAVA's Class Diagram__\n

    class Customer {
        - name : String
        - rentals : Vector
        + Customer()
        + addRental()
        + getName()
        + statement()
    }
    class Movie {
        {static} + CHILDRENS : int
        {static} + NEW_RELEASE : int
        {static} + REGULAR : int
        - priceCode : int
        - title : String
        + Movie()
        + getPriceCode()
        + getTitle()
        + setPriceCode()
    }
    class Rental {
        - daysRented : int
        + Rental()
        + getDaysRented()
        + getMovie()
    }


  Rental o--> Movie : movie
  Customer "1" --> "*" Rental: rents


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
